2009-06-15  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_sig/src/Vector.cpp: improve read() method to 
	do a sanity check, for better error recovery (thanks Arjan Gijsberts)

2009-06-14  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/harness/PortReaderBufferTest.cpp: increase
	timeout for callback test, it may be too tight.

2009-06-12  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/: lots of updates to make Java examples work again
	after yarp classes were moved into a package (thank you Sebastian 
	Wrede!)

2009-06-09  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/impl/ThreadImpl.h: avoid using
	ACE_Auto_Event class, in favor of Semaphores - just because they
	have been more tested against different ACE builds.  Thanks to
	Alejandro R. Mosteo for drawing attention to ThreadTest problems
	in bug report #2801261

	* src/libYARP_OS/harness/ThreadTest.cpp: regression test for
	isRunning() was not quite right, it could fail even for 
	correct behavior.  Thanks to Alejandro R. Mosteo for drawing
	attention to ThreadTest problems in bug report #2801261

2009-06-08  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/CMakeLists.txt: place YARP Java classes in package
	called yarp (thanks Severin Lemaignan).

	* example/swig/example.rb, example/swig/CMakeLists.txt:
	added Ruby wrappers and test program  (thanks Severin Lemaignan
	for suggestion).

2009-05-27  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/carrier/carrier_human.cpp: more complete example
	for creating a new carrier.  See corresponding tutorial,
	in src/doc/carrier_expert.dox

	* src/libYARP_OS/src/Port.cpp: if a port is sending data,
	give it a chance to finish before closing (thanks to Pablo
	Urcola for pointing out this issue).

	* src/libYARP_OS/include/yarp/os/BufferedPort.h: implement
	isWriting() method, like yarp::os::Port::isWriting

2009-05-25 Lorenzo Natale <nat@liralab.it>